--- a/index2.html
+++ b/index2.html
@@ -7,14 +7,14 @@
   <title>Document</title>
   <style>
     .container {
-      width: 80%;
+      width: 90%;
       margin: 0 auto;
       height: 100vh;
     }
   </style>
 </head>
 <body>
-  <div class="containe"></div>
+  <div class="container"></div>
 
   <script src="main2.js"></script>
 </body>
